1，完善npm run test 2，完善条件importScripts

--- a/bs-config.json
+++ b/bs-config.json
@@ -1,9 +1,11 @@
 {
-    "port": 3301,
+    "port": 3303,
     "files": [
         "./**/*.{html,htm,css,js}"
     ],
     "logLevel": "silent",
+    "notify": false,
+    "startPath": "/test/index.html",
     "server": {
         "baseDir": "./",
         "middleware": {
